objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Stomach_digestive_abdominal_problems__c</fullName>
        <label>Stomach / digestive / abdominal problems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suspicion_of_pregnancy__c</fullName>
        <description>If female, do they know or suspect that they are pregnant?</description>
        <label>Suspicion of pregnancy?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCNPaymentID__c</fullName>
        <description>Unique TCN payment ID for tracking purposes</description>
        <displayFormat>S{00000}</displayFormat>
        <inlineHelpText>Unique TCN payment ID for tracking purposes</inlineHelpText>
        <label>TCNPaymentID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TCS_Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this option to feature this record in the TCS home page</description>
        <label>TCS Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taking_any_medication__c</fullName>
        <description>Taking any medication?</description>
        <label>Taking any medication?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teacher_NOTE_add_l_issues__c</fullName>
        <label>Teacher NOTE add&apos;l issues</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Teacher_OK_to_accept__c</fullName>
        <inlineHelpText>Tick if teacher thinks we should accept</inlineHelpText>
        <label>Teacher OK to accept</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Teacher_no_add_l_comments__c</fullName>
        <label>Teacher no add&apos;l comments</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_1_0_sent__c</fullName>
        <inlineHelpText>Date text 1.0 (hoodie )was sent</inlineHelpText>
        <label>Text 1.0 sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_2_0_sent__c</fullName>
        <inlineHelpText>Date text 2.0 (hoodie and money) was sent</inlineHelpText>
        <label>Text 2.0 sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_3_0_sent__c</fullName>
        <inlineHelpText>Date text 3.0 (PG form) sent</inlineHelpText>
        <label>Text 3.0 sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_sent_re_Rooms__c</fullName>
        <description>requesting room person</description>
        <label>Text sent - re Rooms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_choice_area_of_interest__c</fullName>
        <label>Third choice area of interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_wave_contacted__c</fullName>
        <label>Third wave contacted?</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_name_to_give_permission__c</fullName>
        <description>Name of cardholder retyped as proxy for signature to give permission to charge card</description>
        <label>Type name to give permission</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_2nd_given__c</fullName>
        <label>Voucher 2nd given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_3rd_given__c</fullName>
        <label>Voucher 3rd given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Number_owed__c</fullName>
        <label>Voucher -  Number owed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voucher_given__c</fullName>
        <inlineHelpText>Date voucher given</inlineHelpText>
        <label>Voucher given date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_offer__c</fullName>
        <inlineHelpText>Date voucher offer sent</inlineHelpText>
        <label>Voucher offer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_type__c</fullName>
        <inlineHelpText>Type of voucher</inlineHelpText>
        <label>Voucher type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vouchers_Number_given__c</fullName>
        <label>Vouchers - Number given</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vouchers_Successful_recommendation__c</fullName>
        <description>The people in this box were convinced by this person to signed up and have also paid.  
Vouchers will not necessarily be given if the person signed up before the offer was made.</description>
        <label>Vouchers - Successful recommendation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vouchers_Unsuccessful_recommendat__c</fullName>
        <description>People that this person has recommended and who have given in part 1 applications, but which have not yet been converted into fully signed up and paid individuals, or for whom vouchers are not applicable because, for example, they signed up before the date this person was offered vouchers.</description>
        <label>Vouchers - Unsuccessful recommendation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>W3_final_call_held__c</fullName>
        <label>W3 final call held</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wave_assigned__c</fullName>
        <inlineHelpText>Wave the Associate Mentor is assigned onto</inlineHelpText>
        <label>Wave assigned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 (S1)</fullName>
                </value>
                <value>
                    <fullName>2 (H1)</fullName>
                </value>
                <value>
                    <fullName>3 (S2)</fullName>
                </value>
                <value>
                    <fullName>4 (S3)</fullName>
                </value>
                <value>
                    <fullName>5 (S4)</fullName>
                </value>
                <value>
                    <fullName>6 (H2)</fullName>
                </value>
                <value>
                    <fullName>7 (S5)</fullName>
                </value>
                <value>
                    <fullName>8 (S6)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave_availability__c</fullName>
        <inlineHelpText>Waves the Associate Mentor is available to attend</inlineHelpText>
        <label>Wave availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 (S1)</fullName>
                </value>
                <value>
                    <fullName>2 (H1)</fullName>
                </value>
                <value>
                    <fullName>3 (S2)</fullName>
                </value>
                <value>
                    <fullName>4 (S3)</fullName>
                </value>
                <value>
                    <fullName>5 (S4)</fullName>
                </value>
                <value>
                    <fullName>6 (H2)</fullName>
                </value>
                <value>
                    <fullName>7 (S5)</fullName>
                </value>
                <value>
                    <fullName>8 (S6)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave_confirmed__c</fullName>
        <inlineHelpText>Wave allocated</inlineHelpText>
        <label>Wave confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waves_interested_in__c</fullName>
        <label>Waves interested in</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1: Southwark - 29 June to 17 July</fullName>
                </value>
                <value>
                    <fullName>2: Hammersmith - 19 July to 7 Aug</fullName>
                </value>
                <value>
                    <fullName>3: Southwark - 9 Aug to 28 Aug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_payment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Website payment</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_ethnic_group_does_the__c</fullName>
        <label>Ethnic group of applicant?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Asian/Asian British</fullName>
                </value>
                <value>
                    <fullName>White/White British</fullName>
                </value>
                <value>
                    <fullName>Black/Black British</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_stage_of_Pregnancy__c</fullName>
        <description>If so, state at what stage of pregnancy will they be at when completing The Challenge?</description>
        <label>What stage of Pregnancy?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_be_a_SAM__c</fullName>
        <label>Why be a SAM?</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Why_stand_out_as_SAM__c</fullName>
        <label>Why stand out as SAM?</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Withdrawn_by_App_or_PG__c</fullName>
        <inlineHelpText>Date when application was withdrawn by either the young person or their parent/guardian</inlineHelpText>
        <label>Withdrawn by App/PG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Would_like_TCN_to_reclaim_GiftAid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box checked to confirm GiftAid qualification</description>
        <inlineHelpText>Check box if payer has confirmed they qualify for GiftAid and would like TCN to reclaim tax on their donation</inlineHelpText>
        <label>Would like TCN to reclaim GiftAid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X9_May_2010_PG_consent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if PG has consented to YP attendance</inlineHelpText>
        <label>9 May 2010 PG consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X9_May_2010_attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if YP is going to attend</inlineHelpText>
        <label>9 May 2010 attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Young_person_s_religion__c</fullName>
        <label>Young person&apos;s religion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Muslim</fullName>
                </value>
                <value>
                    <fullName>Sikh</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coming2_PG_eve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>coming2 PG eve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>consent_info__c</fullName>
        <description>detail/explanation about consent date etc</description>
        <label>consent info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npe03__Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rec_r_not_in_SF_09__c</fullName>
        <defaultValue>false</defaultValue>
        <description>hence not vouchers owed for this person&apos;s signing up</description>
        <label>rec&apos;r not in SF&apos;09</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tyjry_dasfgdsf__c</fullName>
        <label>tyjry dasfgdsf</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>All_2011_Payments</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Payment_method__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Fees_2011_Central_Ops</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Fees_2011_Marketing</value>
        </filters>
        <label>All 2011 Payments</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>MarketingAll</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_2011_Payments_over_50</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Payment_method__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Would_like_TCN_to_reclaim_GiftAid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Fees_2011_Central_Ops</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Fees_2011_Marketing</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>greaterThan</operation>
            <value>50</value>
        </filters>
        <label>All 2011 Payments over £50</label>
        <sharedTo>
            <group>Central_Comms</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_2012_Payments</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Payment_method__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Fees_2012_Central_Ops</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Fees_2012_Marketing</value>
        </filters>
        <label>All 2012 Payments</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>MarketingAll</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Applicants</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Applicant_surname__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PG_form_sent__c</columns>
        <columns>Wave_confirmed__c</columns>
        <columns>Withdrawn_by_App_or_PG__c</columns>
        <columns>Rejected__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Applicants</label>
    </listViews>
    <listViews>
        <fullName>All_Applicants_TEST</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Applicant_surname__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PG_form_sent__c</columns>
        <columns>Wave_confirmed__c</columns>
        <columns>Withdrawn_by_App_or_PG__c</columns>
        <columns>Rejected__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_method__c</field>
            <operation>equals</operation>
            <value>Credit or debit card Worldpay,Credit or debit card PayPal</value>
        </filters>
        <label>All Applicants TEST</label>
    </listViews>
    <listViews>
        <fullName>All_Central_Ops_payments</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Payment_method__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>First_name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Fees_2011_Central_Ops</value>
        </filters>
        <label>All Central Ops-entered payments</label>
        <sharedTo>
            <group>Central_Comms</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Marketing_payments</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Payment_method__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Fees_2011_Marketing</value>
        </filters>
        <label>All Marketing-entered payments</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>MarketingAll</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amount_received</fullName>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Payment_method__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Applicant_surname__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2011</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>The Challenge Network</value>
        </filters>
        <label>Amount received</label>
    </listViews>
    <listViews>
        <fullName>Booking_date_errors</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>AppID__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Applicant_surname__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterThan</operation>
            <value>6/6/2009</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>3/1/2009</value>
        </filters>
        <label>Booking date errors</label>
    </listViews>
    <listViews>
        <fullName>By_School</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Applicant_surname__c</columns>
        <columns>Wave_confirmed__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Waves_interested_in__c</columns>
        <columns>Sixth_form__c</columns>
        <filterScope>Everything</filterScope>
        <label>By School</label>
    </listViews>
    <listViews>
        <fullName>CC_payment</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Applicant_surname__c</columns>
        <columns>Payment_method__c</columns>
        <columns>Payment_notes__c</columns>
        <columns>Payment_received__c</columns>
        <columns>Amount_received__c</columns>
        <columns>Payment_banked__c</columns>
        <columns>Amount_banked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sent_acceptance__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2009</value>
        </filters>
        <filters>
            <field>Payment_method__c</field>
            <operation>contains</operation>
            <value>card</value>
        </filters>
        <label>CC payment</label>
    </listViews>
    <listViews>
        <fullName>Cheque_payment</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Applicant_surname__c</columns>
        <columns>Payment_banked__c</columns>
        <columns>Amount_banked__c</columns>
        <columns>Payment_notes__c</columns>
        <columns>Amount_received__c</columns>
        <columns>Payment_received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_method__c</field>
            <operation>contains</operation>
            <value>cheque</value>
        </filters>
        <filters>
            <field>Payment_received__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Sent_acceptance__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Cheque payment</label>
    </listViews>
    <listViews>
        <fullName>Consent_outstanding_all_waves</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Applicant_surname__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Wave_confirmed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sent_acceptance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Withdrawn_by_App_or_PG__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Rejected__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>P_G_form_received__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Wave_confirmed__c</field>
            <operation>equals</operation>
            <value>3rd</value>
        </filters>
        <label>Consent outstanding W3</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Did_not_Finish</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Applicant_surname__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Did_not_finish__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Did not Finish</label>
    </listViews>
    <recordTypes>
        <fullName>Fees_2011_Central_Ops</fullName>
        <active>true</active>
        <businessProcess>Fees payment process</businessProcess>
        <label>Fees 2011 Central Ops</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fees_2011_Marketing</fullName>
        <active>true</active>
        <businessProcess>Fees payment process</businessProcess>
        <label>Fees 2011 Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fees_2012_Central_Ops</fullName>
        <active>true</active>
        <businessProcess>Fees payment process</businessProcess>
        <label>Fees 2012 Central Ops</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fees_2012_Marketing</fullName>
        <active>true</active>
        <businessProcess>Fees payment process</businessProcess>
        <description>Payments received for 2012 programme via Marketing</description>
        <label>Fees 2012 Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fees_2013_CCT</fullName>
        <active>true</active>
        <businessProcess>Fees payment process</businessProcess>
        <label>Fees 2013 CCT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fees_2013_Marketing</fullName>
        <active>true</active>
        <businessProcess>Fees payment process</businessProcess>
        <label>Fees 2013 Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fundraising</fullName>
        <active>true</active>
        <businessProcess>Fees payment process</businessProcess>
        <label>Fundraising</label>
    </recordTypes>
    <recordTypes>
        <fullName>NCS_Call_Centre</fullName>
        <active>true</active>
        <businessProcess>Participant Application</businessProcess>
        <description>For payments made to the NCS Trust as a part of the 2014 NCS Marketing Campaign.</description>
        <label>NCS Trust Call Centre</label>
    </recordTypes>
    <recordTypes>
        <fullName>NCS_fees_CCT</fullName>
        <active>true</active>
        <businessProcess>Fees payment process</businessProcess>
        <label>NCS fees CCT</label>
    </recordTypes>
    <recordTypes>
        <fullName>NCS_fees_Marketing</fullName>
        <active>true</active>
        <businessProcess>Fees payment process</businessProcess>
        <label>NCS fees Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>NCS_fees_OBS</fullName>
        <active>true</active>
        <businessProcess>Fees payment process</businessProcess>
        <description>Payments received for NCS through OBS</description>
        <label>NCS fees OBS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Participant_Application</fullName>
        <active>true</active>
        <businessProcess>Participant Application</businessProcess>
        <description>Participant Application</description>
        <label>Participant Application</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>